core/roboconf-core/src/test/resources/configurations/invalid/cycle-in-facet.graph
A {
	alias: A component called A;
	facets: F1;
	installer: f1;
}

B {
	alias: B component called B;
	installer: bash;
}

# Cycle: f1 -> f2 -> f3 -> f1
facet F1 {
	installer: f1;
	extends: F2;
}

facet F2 {
	installer: f2;
	extends: F3;
}

facet F3 {
	installer: f3;
	extends: F1;
}
